--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,11 +10,11 @@ copyright: 'INMAK &copy; 2019'
 
 # Katex
 extra_css:
-#  - 'css/katex.css'
+  - 'css/katex.css'
   - 'https://cdn.jsdelivr.net/npm/katex@0.10.2/dist/katex.min.css'
 
 extra_javascript:
-#  - 'js/katex.js'
+  - 'js/katex.js'
   - 'https://cdn.jsdelivr.net/npm/katex@0.10.2/dist/katex.min.js'
   - 'https://cdn.jsdelivr.net/npm/katex@0.10.2/dist/contrib/auto-render.min.js'
 
